--- a/index.html
+++ b/index.html
@@ -1,65 +1,47 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Anchory.GitHub.io by jessalvina</title>
+<!DOCTYPE html> 
+<html> 
+<head>
+  <meta charset="UTF-8">	
+	<title>Anchory Restaurant</title> 
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link rel="stylesheet" href="jquery.mobile.structure-1.0.1.css" />
+	<link rel="apple-touch-icon" href="images/launch_icon_57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
+	<link rel="stylesheet" href="jquery.mobile-1.0.1.css" />
+	<link rel="stylesheet" href="custom.css" />
+	<script src="js/jquery-1.7.1.min.js"></script>
+	<script src="js/jquery.mobile-1.0.1.min.js"></script>
+</head> 
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Anchory.GitHub.io</h1>
-        <p class="header"></p>
-
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/jessalvina/anchory.github.io/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/jessalvina/anchory.github.io/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/jessalvina/anchory.github.io">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jessalvina">jessalvina</a></p>
-
-
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+<body> 
+<div data-role="page" id="home" data-theme="c">
+	<div data-role="content">
+	
+		<div id="branding">
+			<h1>Anchory Restaurant </h1>
+		</div>
 		
-  </body>
+		<div  class = "content" data-role="content" >
+			<div class="ui-grid-a">
+			<div class="ui-block-a"><img src = "images/shrimp_escabeche.jpg"></div>
+			<div class="ui-block-b"><img src = "images/salmon.jpg"></div>	
+			<div class="ui-block-a"><p><a href="appetizer.html" data-role="button"> Appetizers</a></p></div>
+			<div class="ui-block-b"><p><a href="maincourse.html" data-role="button"> Main Courses</a></p></div>
+			<div class="ui-block-a"><img src = "images/dessert.jpg"></div>
+			<div class="ui-block-b"><img src = "images/drink.jpg"></div>
+			<div class="ui-block-a"><p><a href="dessert.html" data-role="button">Desserts</a></p></div>
+			<div class="ui-block-b"><p><a href="drink.html" data-role="button"> Drinks</a></p></div>
+			</div>
+		</div>
+		
+		<ul data-role="listview" data-inset="true" >
+		<li><a href="feedback.html" data-transition="slidedown"> <img src="images/feedback.png"/> <h3> Feedback </h3></a></li>
+		<li><a href="restoinfo.html" data-transition="slidedown"> <img src="images/contact.gif"/> <h3> Contact Us </h3></a></li>
+		</ul>
+		<footer data-role="footer"><a href="developer.html">About developer</a></footer>
+	</div>
+
+</div><!-- /page -->
+</body>
 </html>
